# llm

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyrightconfig.json
research/: README.md
testing/: .gitignore  conftest.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
testing/docs/superpowers/archive/: 2026-04-08-llm-surgeon-design-v1.md
testing/docs/superpowers/plans/: 2026-04-08-phase1-core-surgery.md  2026-04-08-phase2-export-pipeline.md  2026-04-09-phase3-quantitative-eval.md  2026-04-09-phase4-inspection-analysis.md  2026-04-09-phase5-generation-comparison.md  2026-04-09-phase6-calibration-recipes-tracking.md  2026-04-11-probe-module.md  2026-04-17-phase1-model-loading-refactor.md  2026-04-17-phase2-lm-eval-harness.md  2026-04-17-phase3-activation-patching.md  2026-04-19-phase35-attribution-patching.md  2026-04-21-phase36-per-head-attribution.md  2026-04-23-phase310-integrated-gradients.md  2026-04-23-phase37-edge-attribution.md  2026-04-23-phase38-circuit-extraction.md  2026-04-23-phase39-per-neuron-attribution.md  2026-04-23-phase391-neuron-decode.md  2026-04-23-phase392-head-decode.md  2026-04-24-phase3101-per-head-per-neuron-ig.md  2026-04-24-phase3102-edge-circuit-ig.md  2026-04-25-phase311-logit-lens-x-ap.md
testing/docs/superpowers/specs/: 2026-04-08-llm-surgeon-design.md  2026-04-08-llm-surgeon-phase-plan.md  2026-04-11-live-probe-gui-design.md  2026-04-13-gui-polish-reliability-design.md  2026-04-15-memory-optimization-design.md  2026-04-17-phase1-model-loading-design.md  2026-04-17-phase2-lm-eval-harness-design.md  2026-04-17-phase3-activation-patching-design.md  2026-04-19-phase35-attribution-patching-design.md  2026-04-21-phase36-per-head-attribution.md  2026-04-23-phase310-integrated-gradients.md  2026-04-23-phase37-edge-attribution.md  2026-04-23-phase38-circuit-extraction.md  2026-04-23-phase39-per-neuron-attribution.md  2026-04-23-phase391-neuron-decode.md  2026-04-23-phase392-head-decode.md  2026-04-24-phase3101-per-head-per-neuron-ig.md  2026-04-24-phase3102-edge-circuit-ig.md  2026-04-25-phase311-logit-lens-x-ap.md  2026-04-25-phase312-lens-trace-strip.md
testing/examples/: probe_demo.py  quickstart.py  qwen_load_check.py
testing/experiments/: test_full_recipe.yaml
testing/gui/: run.sh
testing/gui/backend/: app.py  hidden_state_cache.py  log.py  manifest.py  persistence.py  sessions.py
testing/gui/backend/routes/: __init__.py  capture.py  inspect.py  probes.py  sessions.py
testing/gui/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
testing/gui/frontend/src/: App.css  App.tsx
testing/gui/frontend/src/components/: BulkActionBar.tsx  CheatSheet.tsx  CompareSelector.tsx  ExperimentIO.tsx  ExportButtons.tsx  GenerationOutput.tsx  IntervenePanel.tsx  ModelCombobox.tsx  PatchingControls.tsx  ProbeConfig.tsx  ProbePanel.tsx  PromptLibraryBar.tsx  ResultFilterBar.tsx  ResultMetaEditor.tsx  SessionSidebar.tsx  SessionsPanel.tsx  SurgeryParamForm.tsx  TabBar.tsx  UndoToast.tsx  VisualizationArea.tsx
testing/gui/frontend/src/components/visualizations/: ABDiff.tsx  ActivationPatchingHeatmap.tsx  AttentionEntropy.tsx  CausalStoryPanel.tsx  CircuitPanel.tsx  CrossResultPCA.tsx  DimVsLayerHeatmap.tsx  DivergenceHeatmap.tsx  EdgeAttributionPanel.tsx  HiddenStateBarStrip.tsx  HiddenStateHeatmap.tsx  HiddenStatePCA.tsx  LayerInfluence.tsx  LensTraceStrip.tsx  LogitLensHeatmap.tsx  PerHeadPatchingHeatmap.tsx  PerNeuronPatchingPanel.tsx  ResidualDecodeBlock.tsx  ResidualNorms.tsx
testing/gui/frontend/src/hooks/: useKeyboardShortcuts.ts  useSessions.ts  useStopCancel.ts  useWebSocket.ts
testing/gui/frontend/src/state/: store.ts
testing/gui/frontend/src/types/: api.ts
testing/gui/frontend/src/utils/: causalStory.test.ts  causalStory.ts  circuitBFS.test.ts  circuitBFS.ts  displayToken.ts  divergenceMatrix.test.ts  divergenceMatrix.ts  download.ts  experiment.ts  hiddenState.ts  idbStorage.ts  interventionPreview.ts  num.ts  patchingMetrics.ts  pca.ts  promptSetLibrary.test.ts  promptSetLibrary.ts  stopSequences.test.ts  stopSequences.ts  surgeryPreview.ts  timeAgo.ts  useResidualDecode.ts  useResidualGrid.ts  useResidualGridSet.ts
testing/gui/frontend/tests/e2e/: smoke.spec.ts  tsconfig.json
testing/gui/frontend/tests/unit/: patchingMetrics.test.ts
testing/gui/tests/: conftest.py  test_auto_pick.py  test_hidden_state_cache.py  test_inspect_routes.py  test_manifest.py  test_models_available.py  test_persistence.py  test_probe_ws.py  test_session_routes.py  test_sessions.py  test_surgery_routes.py
testing/gui_cpp/: CLAUDE.md
testing/gui_cpp/docs/: BACKENDS.md
testing/gui_cpp/src/: main.cpp
testing/gui_cpp/src/model/: mock_model.cpp  model.hpp
testing/llm_engine_cpp/: CMakeLists.txt
testing/llm_engine_cpp/include/llm_engine/: gguf_inspector_engine.hpp  libtorch_engine.hpp  llama_cpp_engine.hpp  native_runtime_engine.hpp
testing/llm_engine_cpp/src/: gguf_inspector_engine.cpp  libtorch_engine.cpp  llama_cpp_engine.cpp  native_runtime_engine.cpp
testing/llm_engine_cpp/tests/: test_llama_cpp_real.cpp
testing/llm_surgeon/: __init__.py  benchmark.py  export.py  gguf_reader.py  gguf_writer.py  inspect.py  llama_engine.py  probe.py  recipe.py  surgery.py  tracking.py  verify.py
testing/llm_surgeon/probe/: __init__.py  _attribution.py  _capture.py  _hooks.py  _intervention.py  _logit_lens.py  _nla.py  _types.py
testing/prompts/: default.json
testing/research/observations/: 2026-04-09-layer19-factual-vs-linguistic-coherence.md
testing/tests/: conftest.py  test_benchmark.py  test_decode_head.py  test_decode_neuron.py  test_decode_residual.py  test_decode_residual_grid.py  test_export.py  test_gguf_reader.py  test_head_surgery.py  test_inspect.py  test_llama_engine.py  test_probe.py  test_probe_activation_patch.py  test_probe_attribution_patch.py  test_probe_circuit.py  test_probe_edge_ap.py  test_probe_per_head_ap.py  test_probe_per_neuron_ap.py  test_probes_helpers.py  test_recipe.py  test_surgery.py  test_tracking.py  test_verify.py
(+37 files in other folders)
